# babytilly2

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  Procfile  app.json  docker-compose.yml  import.csv  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yaml
babytilly2/: admin.py  apps.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
commercial/: admin.py  apps.py  context_processors.py  fields.py  filters.py  forms.py  formsets.py  functions.py  middleware.py  models.py  tasks.py  urls.py  views.py
commercial/migrations/: 0001_initial.py  0002_profile.py  0003_importprice.py  0004_alter_articleproperties_options.py  0005_departamentimage.py  0005_startpageimage.py  0006_alter_startpageimage_options.py  0006_auto_20210923_1502.py  0007_delete_startpageimage.py  0007_startpageimage_department_order.py  0008_create_profile.py  0008_startpageimage.py  0009_alter_importprice_file.py  0009_rename_department_startpageimage_departament.py  0010_strip_categories_id.py  0011_auto_20211026_0129.py  0012_auto_20211118_1512.py  0013_auto_20211122_1443.py  0014_alter_articleproperties_is_special.py  0015_auto_20211122_1556.py  0016_page.py  0017_articleimage_departament.py  0018_auto_20211125_1633.py  0019_auto_20211129_1901.py  0020_auto_20211129_1937.py  0021_auto_20211129_1944.py  0022_auto_20211129_1952.py  0023_profile_sale.py  0024_auto_20211201_1447.py  0025_auto_20211201_1456.py  0026_orderitem_name.py  0027_clear_orders.py  0028_auto_20211202_2129.py  (+40 more)
commonutils/: views.py
templates/: base.html  index.html
(+30 files in other folders)
