[project]
name = "b2bcarrello"
version = "1.0.0"
description = "B2B carrello"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {email = "vitaly.omelchuk@gmail.com"},
  {name = "Vitalii Omelchuk"}
]
maintainers = [
  {name = "Vitalii Omelchuk", email = "vitaly.omelchuk@gmail.com"}
]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://b2bcarrello.com"
repository = "https://github.com/vitaly4uk/babytilly2"

[tool.pip-tools]
generate-hashes = true